fix spacing of letters

--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -33,6 +33,9 @@
     h2 {
       font-size: 30px;
       color: $fifthColor;
+      letter-spacing: 5px;
+        font-weight: 300;
+        text-transform: uppercase;
     }
 
     form {
